04/25/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.3.1 'Black Dow':
	- Stale Nonce bug fixed.
	- Minor client fix.
	
04/21/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.3.0 'Black Dow':
	- STUN stand-alone functionality improved according to RFC 5389.
	- ALTERNATE-SERVER implemented as "light" load balancing feature.
	- stun-only option implemented. 
	- scripts directory reorganized.
	
04/19/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.2.1 'Black Dow':
	- Misc docs fixes.
	
04/13/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.2.0 'Black Dow':
	- Multiple database shared secrets supported for REST API.
	- Added support for some OpenSSL FIPS versions (like openssl 0.9.8e-fips-rhel5).
	
04/13/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.1.3 'Black Dow':
	- Maintenance (docs, etc).
	- Added partial support for Cygwin. Only TCP & TLS protocols
	are support for client-to-server communications (as in RFC 5766 and
	RFC 6062). UDP supported only for relay communications. DTLS is not 
	supported at all. The problem is in Winsock UDP sockets implementation.
	
04/11/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.1.2 'Black Dow':
	- Work on configuration and build.

04/9/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.1.1 'Black Dow':
	- Docs improvements. 
	- Load balancing use case added to TurnNetworks.pdf. 
	- Verbose mode split into 'normal' and 'extra' modes.
	- Logging extended and fixed.
	
04/7/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.1.0 'Black Dow':
	- Compilation flags improved.
	- utility programs renamed and moved to bin/ directory.
	- README and turnserver man page separated into three sections - 
	turnserver, turnadmin, turnutils.
	
04/6/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 1.8.0.6 'Black Dow':
	- Added option "--psql-userdb" for better visual separation
	between PostgreSQL and MySQL stuff.
	- turnadmin flat files handling fixed.