@@ -332,3 +332,6 @@
 #
 # stun-only 
 
+# This is the username/timestamp separator symbol (character) in TURN REST API.
+# The default value is ':'.
+# rest-api-separator=:	
