@@ -1,5 +1,5 @@
 .\"Text automatically generated by txt2man
-.TH TURN  "22 April 2013" "" ""
+.TH TURN  "25 April 2013" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client 
@@ -461,6 +461,11 @@ Option to set alternative server for TLS & DTLS services in form of
 <ip>:<port>. If the port number is omitted, then the default port 
 number 5349 for the TLS/DTLS protocols will be used. See the previous option for the 
 functionality description.
+.TP
+.B
+\fB-C\fP, \fB--rest-api-separator\fP
+This is the username/timestamp separator symbol (character) in TURN REST API.
+The default value is ':'.
 .PP
 ===============================================================================
 .SH LOAD BALANCE
